# todoist-auto-labeler

./: .env.example  .gitignore  Cargo.toml  README.md
src/: airtable_keyword_label_provider.rs  main.rs  todoist_api_adapter.rs
