[package]
name = "todoist-labeler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "fs",
] }
hyper = "^0.14"
hyper-rustls = "^0.23"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "1.0.147"
reqwest = { version = "^0.11", features = ["json"] }
dotenv = "0.15.0"
